--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
 
     
 
@@ -97,7 +97,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-parallax-background" id="msg-box3-2b" style="background-image: url(assets/images/pexels-photo-2000x1334.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section article mbr-parallax-background" id="msg-box3-2b" style="background-image: url(assets/images/mbr-1-2000x1333.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -164,7 +164,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="form1-2l" style="background-image: url(assets/images/mbr-2000x2500.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="form1-2l" style="background-image: url(assets/images/mbr-2000x1500.jpg); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -190,7 +190,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="h+NAfoH9Lc1legkiZxqCDBc1XbZhtkTIe0zen231QCqiGjZR/aNVYEY4KRY0Pv1TMOLqjNS38VYvOW2TQNL46BMZ1+ZE/VWpnoh2UX6lkiZlQaFusO5C4F7WQHGmLc/j" data-form-email="true">
+                        <input type="hidden" value="J5GQZA15pPgO9iWcGZex76SbjKjpVGVGu+9kryu+kH7drt6atQLdZHm9+5f1eW1uGq+hQFitDMhE4lC5Zqir1kYUwqtTwG9RN5jv43Q8KRAOOUOL+ki0PlQ6hG4X4csk" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
