--- a/page5.html
+++ b/page5.html
@@ -57,74 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="form1-2o" style="background-image: url(assets/images/pexels-photo-2000x1333-2.png); padding-top: 120px; padding-bottom: 120px;">
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
-    </div>
-    <div class="mbr-section mbr-section__container mbr-section__container--middle">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 text-xs-center">
-                    <h3 class="mbr-section-title display-2">CONTACT FORM</h3>
-                    <small class="mbr-section-subtitle">Come slay some giants with us!&nbsp;</small>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="mbr-section mbr-section-nopadding">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
-
-
-                    <div data-form-alert="true">
-                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">anks for filling out the form! Get ready to slay some giants! </div>
-                    </div>
-
-
-                    <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
-
-                        <input type="hidden" value="5CB8ghD5SElO2jWvXDFE7kcWi3nkNEZwzjKiSkUQn/gWi46HSCohk6OOmrcxMsZwjpNZcaULU0+37MZpcKCGF1Vaz6RkDlveyWqM9YkQDsOhwQEshDO7XCj2ubm/lMsr" data-form-email="true">
-
-                        <div class="row row-sm-offset">
-
-                            <div class="col-xs-12 col-md-4">
-                                <div class="form-group">
-                                    <label class="form-control-label" for="form1-2o-name">Name<span class="form-asterisk">*</span></label>
-                                    <input type="text" class="form-control" name="name" required="" data-form-field="Name" id="form1-2o-name">
-                                </div>
-                            </div>
-
-                            <div class="col-xs-12 col-md-4">
-                                <div class="form-group">
-                                    <label class="form-control-label" for="form1-2o-email">Email<span class="form-asterisk">*</span></label>
-                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" id="form1-2o-email">
-                                </div>
-                            </div>
-
-                            <div class="col-xs-12 col-md-4">
-                                <div class="form-group">
-                                    <label class="form-control-label" for="form1-2o-phone">Phone</label>
-                                    <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="form1-2o-phone">
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div class="form-group">
-                            <label class="form-control-label" for="form1-2o-message"></label>
-                            <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-2o-message"></textarea>
-                        </div>
-
-                        <div><button type="submit" class="btn btn-warning">LET'S SLAY!&nbsp;</button></div>
-
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="mbr-section article" id="msg-box8-1o" data-bg-video="https://www.youtube.com/embed/D93kuXAYGzs?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Creator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1o" data-bg-video="https://www.youtube.com/embed/D93kuXAYGzs?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -252,7 +185,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="form1-2r" style="background-image: url(assets/images/mbr-2000x25004.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="form1-2u" style="background-image: url(assets/images/mbr-2000x1500.jpg); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -272,45 +205,45 @@
 
 
                     <div data-form-alert="true">
-                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">anks for filling out the form! Get ready to slay some giants! </div>
+                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out the form! Get ready to slay some giants!</div>
                     </div>
 
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="KSBSx6dpnzndAdDhn66Ve46CvkO4Lq0GSYfooJopa3T88YICeW7nBpYFcGAqxvcl6HhSDP96vrwNW/NeD58Qb8a13/QRMI9zwDge3+CNAodrx0Aa5PqjWeIzXWoYwT7X" data-form-email="true">
+                        <input type="hidden" value="FhwphI2rA2Wjqqc+7aXc/iUDmL69mnfJp4R2pboAs9jIiMAMI/ZO7Xjg1xYls0jUxV/st/9GuY/am93QKOAZwkNBPZRwlj3E2IvsIogQc18hN5VnyznYdtdu2hqdMUIX" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
                             <div class="col-xs-12 col-md-4">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="form1-2r-name">Name<span class="form-asterisk">*</span></label>
-                                    <input type="text" class="form-control" name="name" required="" data-form-field="Name" id="form1-2r-name">
+                                    <label class="form-control-label" for="form1-2u-name">Name<span class="form-asterisk">*</span></label>
+                                    <input type="text" class="form-control" name="name" required="" data-form-field="Name" id="form1-2u-name">
                                 </div>
                             </div>
 
                             <div class="col-xs-12 col-md-4">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="form1-2r-email">Email<span class="form-asterisk">*</span></label>
-                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" id="form1-2r-email">
+                                    <label class="form-control-label" for="form1-2u-email">Email<span class="form-asterisk">*</span></label>
+                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" id="form1-2u-email">
                                 </div>
                             </div>
 
                             <div class="col-xs-12 col-md-4">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="form1-2r-phone">Phone</label>
-                                    <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="form1-2r-phone">
+                                    <label class="form-control-label" for="form1-2u-phone">Phone</label>
+                                    <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="form1-2u-phone">
                                 </div>
                             </div>
 
                         </div>
 
                         <div class="form-group">
-                            <label class="form-control-label" for="form1-2r-message"></label>
-                            <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-2r-message"></textarea>
+                            <label class="form-control-label" for="form1-2u-message">Message</label>
+                            <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-2u-message"></textarea>
                         </div>
 
-                        <div><button type="submit" class="btn btn-warning">LET'S SLAY!&nbsp;</button></div>
+                        <div><button type="submit" class="btn btn-primary">CONTACT US</button></div>
 
                     </form>
                 </div>
@@ -334,8 +267,8 @@
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/jquery-mb-ytplayer/jquery.mb.ytplayer.min.js"></script>
+  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
