--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -201,7 +201,18 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="form1-2s" style="background-image: url(assets/images/mbr-2000x25004.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-section__container article" id="header3-26" style="background-color: rgb(184, 49, 47); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">**$50 consultation fee for the intial session.**</h3>
+                <small class="mbr-section-subtitle">This fee will be added towards payment for the chosen website package, if Sling services are chosen.</small>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="form1-2v" style="background-image: url(assets/images/mbr-2000x1500.jpg); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
@@ -221,59 +232,48 @@
 
 
                     <div data-form-alert="true">
-                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">anks for filling out the form! Get ready to slay some giants! </div>
+                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                     </div>
 
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="Wo9X9eIeCjbaMkPfTAxqDgpsKYkOrBSF1ZVaVoonVOM04WXUP+ohtiFki2h4oq8hZLd/RKpCgvaX5saE6890HMgzp+yp/CSc6W+GZNtUbXf5fEICosdExlr6wg35fF9n" data-form-email="true">
+                        <input type="hidden" value="72ge84S6OlqiiPeeMLfLbrL47Wbdux2u9qcZkEyOW8Sus7c+MzmTUO4DMlbemz1jQkN7UC3x9Cg/O99GzMVPQ9k3oodukeU9zkm4VxKx0Xr1qQ6mx9MCLN6OkhXk0KyV" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
                             <div class="col-xs-12 col-md-4">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="form1-2s-name">Name<span class="form-asterisk">*</span></label>
-                                    <input type="text" class="form-control" name="name" required="" data-form-field="Name" id="form1-2s-name">
+                                    <label class="form-control-label" for="form1-2v-name">Name<span class="form-asterisk">*</span></label>
+                                    <input type="text" class="form-control" name="name" required="" data-form-field="Name" id="form1-2v-name">
                                 </div>
                             </div>
 
                             <div class="col-xs-12 col-md-4">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="form1-2s-email">Email<span class="form-asterisk">*</span></label>
-                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" id="form1-2s-email">
+                                    <label class="form-control-label" for="form1-2v-email">Email<span class="form-asterisk">*</span></label>
+                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" id="form1-2v-email">
                                 </div>
                             </div>
 
                             <div class="col-xs-12 col-md-4">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="form1-2s-phone">Phone</label>
-                                    <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="form1-2s-phone">
+                                    <label class="form-control-label" for="form1-2v-phone">Phone</label>
+                                    <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="form1-2v-phone">
                                 </div>
                             </div>
 
                         </div>
 
                         <div class="form-group">
-                            <label class="form-control-label" for="form1-2s-message"></label>
-                            <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-2s-message"></textarea>
+                            <label class="form-control-label" for="form1-2v-message">Message</label>
+                            <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-2v-message"></textarea>
                         </div>
 
-                        <div><button type="submit" class="btn btn-warning">LET'S SLAY!&nbsp;</button></div>
+                        <div><button type="submit" class="btn btn-primary">CONTACT US</button></div>
 
                     </form>
                 </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="mbr-section mbr-section__container article" id="header3-26" style="background-color: rgb(184, 49, 47); padding-top: 20px; padding-bottom: 20px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">**$50 consultation fee for the intial session.**</h3>
-                <small class="mbr-section-subtitle">This fee will be added towards payment for the chosen website package, if Sling services are chosen.</small>
             </div>
         </div>
     </div>
