--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
 
     
 
@@ -164,6 +164,17 @@
     </div>
 </section>
 
+<section class="mbr-section mbr-section__container article" id="header3-28" style="background-color: rgb(184, 49, 47); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">**$50 consultation fee for the intial session.**</h3>
+                <small class="mbr-section-subtitle">This fee will be added towards payment for the chosen website package, if Sling services are chosen.</small>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section class="mbr-section mbr-parallax-background" id="form1-2l" style="background-image: url(assets/images/mbr-2000x1500.jpg); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(184, 49, 47);">
     </div>
@@ -190,7 +201,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="J5GQZA15pPgO9iWcGZex76SbjKjpVGVGu+9kryu+kH7drt6atQLdZHm9+5f1eW1uGq+hQFitDMhE4lC5Zqir1kYUwqtTwG9RN5jv43Q8KRAOOUOL+ki0PlQ6hG4X4csk" data-form-email="true">
+                        <input type="hidden" value="cwixDtpedyAEG5c7/R514AYlypfe6gVSArSbiDTcTrp6MfxzbqWys2jN+/w7cqWjHapTwuoq2Mj5puGY1LlmAAgkBYNFUM7bWFBeZ1lG0y6Rkwgby61NHQ1pfngySM00" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -226,17 +237,6 @@
 
                     </form>
                 </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="mbr-section mbr-section__container article" id="header3-28" style="background-color: rgb(184, 49, 47); padding-top: 20px; padding-bottom: 20px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">**$50 consultation fee for the intial session.**</h3>
-                <small class="mbr-section-subtitle">This fee will be added towards payment for the chosen website package, if Sling services are chosen.</small>
             </div>
         </div>
     </div>
