--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
 
     
 
@@ -97,7 +97,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-parallax-background" id="msg-box3-2b" style="background-image: url(assets/images/mbr-1-2000x1333.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section article mbr-parallax-background" id="msg-box3-2b" style="background-image: url(assets/images/mbr-2000x1027.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -201,7 +201,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="z/L6fXUrlBojqu+CjkkL2pZ/HU/RAdUYoVb6EF+qBIvcWgVL2n0I/P4BbwsScPfahMVJQhoe3Su0CZE8DHDgiZfVbSnp/mkI2oBLRcMUvqy2VWq+YuzmjT4MqBRg2qdH" data-form-email="true">
+                        <input type="hidden" value="SrJLnS0RCJSV70OHXrzi4/qR6ZG2L4h59LqtEIPezJEFoEYDIOb0dt1SUn4afWUdKjFLKv9GpMqJrKZVVqBXH5Xtof6CIecgCvHCooE5xWbkiFD5tNADXRfKAG/tKGK0" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
